Updates gradle version from spring-running-in-tomcat

--- a/projects/spring-running-in-tomcat/.gitignore
+++ b/projects/spring-running-in-tomcat/.gitignore
@@ -1,9 +1,11 @@
 HELP.md
 target/
+build/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 logs/
+bin/
 
 ### STS ###
 .apt_generated
@@ -32,3 +34,6 @@ build/
 
 ### VS Code ###
 .vscode/
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/cache.properties
+.gradle/buildOutputCleanup/outputFiles.bin
