--- a/projects/spring-general-lab/src/main/resources/application.yml
+++ b/projects/spring-general-lab/src/main/resources/application.yml
@@ -18,7 +18,9 @@ spring:
       #http://localhost:{service-port}/h2-console
   flyway:
     enabled: true
-    baseline-on-migrate: true      
+    baseline-on-migrate: true
+    locations:
+    - db/migration
       
 #  datasource:
 #    url: jdbc:oracle:thin:@(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = localhost)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ORCLPDB1)))
