--- a/projects/javafx-with-spring/build.gradle
+++ b/projects/javafx-with-spring/build.gradle
@@ -25,11 +25,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+	runtimeOnly 'com.h2database:h2'
+	implementation 'org.flywaydb:flyway-core'
 	implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
 	implementation 'org.openjfx:javafx-graphics:21'
 	implementation 'org.openjfx:javafx-fxml:21'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
