--- a/projects/spring-general-lab/build.gradle
+++ b/projects/spring-general-lab/build.gradle
@@ -39,6 +39,14 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+sourceSets {
+    integrationTest {
+        java {
+            srcDir 'src/integration-test/java'
+        }
+    }
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
