--- a/projects/javafx-with-spring/build.gradle
+++ b/projects/javafx-with-spring/build.gradle
@@ -26,19 +26,20 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.modelmapper:modelmapper:3.2.5'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
     implementation 'org.flywaydb:flyway-core'
     implementation 'net.rgielen:javafx-weaver-spring-boot-starter:2.0.1'
     implementation 'org.openjfx:javafx-controls:23.0.2'
     implementation 'org.openjfx:javafx-graphics:23.0.2'
     implementation 'org.openjfx:javafx-fxml:23.0.2'
-    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    compileOnly 'org.projectlombok:lombok'
+    compileOnly 'com.google.inject:guice:7.0.0'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    compileOnly 'com.google.inject:guice:7.0.0'
 }
 
 javafx {
